# run-cmake-fails-on-windows-runner

./: CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: cmake-with-ninja-on-windows-fails.yml  error1.yml  error2.yml  windows.yml  windows_vsgen.yml
src/: CMakeLists.txt  main.cpp
